manifests/odk-central/enketo-frontend/enketo-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: enketo-frontend-ingress
  namespace: odk-central
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # type of authentication
    # nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - web'
spec:
  tls:
  - hosts:
    - nrc.frkl.dev
    secretName: nrc-frkl-dev-tls
  rules:
  - host: nrc.frkl.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: enketo
          servicePort: 8005
